//    Copyright 2018 Google Inc.
//
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
//
//        https://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.

syntax = "proto3";

package google.fhir.stu3.proto;

import "proto/stu3/annotations.proto";
import "proto/stu3/datatypes.proto";

option java_multiple_files = true;
option java_package = "com.google.fhir.stu3.proto";

// Auto-generated from StructureDefinition for bindingName.
// Suggested Name for code generation.
// See http://hl7.org/fhir/StructureDefinition/elementdefinition-bindingName
message ElementDefinitionBindingName {
  option (structure_definition_kind) = KIND_COMPLEX_TYPE;
  option (fhir_profile_base) = "Extension";
  option (fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/elementdefinition-bindingName";

  // xml:id (or equivalent in JSON)
  String id = 1;

  // Value of extension
  String value_string = 3;
}

// Auto-generated from StructureDefinition for allowedUnits.
// Units to use for measured value.
// See http://hl7.org/fhir/StructureDefinition/elementdefinition-allowedUnits
message ElementDefinitionAllowedUnits {
  option (structure_definition_kind) = KIND_COMPLEX_TYPE;
  option (fhir_profile_base) = "Extension";
  option (fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/elementdefinition-allowedUnits";

  // xml:id (or equivalent in JSON)
  String id = 1;

  // Value of extension
  message Value {
    oneof value {
      option (oneof_validation_requirement) = REQUIRED_BY_FHIR;
      CodeableConcept codeable_concept = 1;
      Reference reference = 2;
    }
  }
  Value value = 3
      [(is_choice_type) = true, (validation_requirement) = REQUIRED_BY_FHIR];
}

// Auto-generated from StructureDefinition for DNASequenceVariantName.
// HGVS nomenclature for observed DNA sequence variant.
// See
// http://hl7.org/fhir/StructureDefinition/observation-geneticsDNASequenceVariantName
message ObservationDNASequenceVariantName {
  option (structure_definition_kind) = KIND_COMPLEX_TYPE;
  option (fhir_profile_base) = "Extension";
  option (fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/observation-geneticsDNASequenceVariantName";

  // xml:id (or equivalent in JSON)
  String id = 1;

  // Value of extension
  CodeableConcept value_codeable_concept = 3;
}

// Auto-generated from StructureDefinition for clinicalTrial.
// The patient's participation in clinical trials.
// See http://hl7.org/fhir/StructureDefinition/patient-clinicalTrial
message PatientClinicalTrial {
  option (structure_definition_kind) = KIND_COMPLEX_TYPE;
  option (fhir_profile_base) = "Extension";
  option (fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/patient-clinicalTrial";

  // xml:id (or equivalent in JSON)
  String id = 1;

  // Additional Content defined by implementations
  repeated Extension extension = 2;

  // National Clinical Trial number
  String n_c_t = 4 [
    (validation_requirement) = REQUIRED_BY_FHIR,
    (fhir_inlined_extension_url) = "NCT"
  ];

  // The period of participation in the clinical trial
  Period period = 5;

  // The reason for participation in the clinical trial
  CodeableConcept reason = 6;
}

// Auto-generated from StructureDefinition for explicit-type-name.
// Advisory - name of Type for implementations.
// See
// http://hl7.org/fhir/StructureDefinition/structuredefinition-explicit-type-name
message ElementDefinitionExplicitTypeName {
  option (structure_definition_kind) = KIND_COMPLEX_TYPE;
  option (fhir_profile_base) = "Extension";
  option (fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/structuredefinition-explicit-type-name";

  // xml:id (or equivalent in JSON)
  String id = 1;

  // Value of extension
  String value_string = 3;
}

// Auto-generated from StructureDefinition for regex.
// Regex applies to the value.
// See http://hl7.org/fhir/StructureDefinition/structuredefinition-regex
message ElementDefinitionRegex {
  option (structure_definition_kind) = KIND_COMPLEX_TYPE;
  option (fhir_profile_base) = "Extension";
  option (fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/structuredefinition-regex";

  // xml:id (or equivalent in JSON)
  String id = 1;

  // Value of extension
  String value_string = 3;
}

// Auto-generated from StructureDefinition for daysOfCycle.
// Days on which the action should be performed.
// See http://hl7.org/fhir/StructureDefinition/timing-daysOfCycle
message DaysOfCycle {
  option (structure_definition_kind) = KIND_COMPLEX_TYPE;
  option (fhir_profile_base) = "Extension";
  option (fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/timing-daysOfCycle";

  // xml:id (or equivalent in JSON)
  String id = 1;

  // Additional Content defined by implementations
  repeated Extension extension = 2;

  // What day to perform
  repeated Integer day = 4 [(validation_requirement) = REQUIRED_BY_FHIR];
}
